tests/cases/errors/inexistent_command.tex
\begin{document}
\commandoInesistente{argomento inesistente}
\end{document}
